# MPC-Final-Race

./: CMakeLists.txt  RACE_REPORT.md  README.md  f1tenth_frenet.json  package.xml  record_wp.py  viz_waypoints.py
c_generated_code_frenet/: Makefile  acados_sim_solver_f1tenth_frenet.c  acados_sim_solver_f1tenth_frenet.h  acados_solver.pxd  acados_solver_f1tenth_frenet.c  acados_solver_f1tenth_frenet.h  main_f1tenth_frenet.c  main_sim_f1tenth_frenet.c
c_generated_code_frenet/f1tenth_frenet_model/: f1tenth_frenet_expl_ode_fun.c  f1tenth_frenet_expl_vde_adj.c  f1tenth_frenet_expl_vde_forw.c  f1tenth_frenet_model.h
config/: frenet_mpc.yaml
launch/: frenet_mpc.launch.py
maps/: centerline.csv  centerline_1_customized.csv  centerline_1_smoothed.csv  centerline_4_safe_wall_v2.csv  centerline_8.csv  halfmap.csv  race_track_final_smoothed.csv  wp-neel-tuned.csv
scripts/: generate_frenet_solver.py
src/: frenet_mpc_node.cpp
